[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "Multi-language code review environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "uvicorn:main"

[tool.uv]
dev-dependencies = []
